panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__abi__test_member_access_on_returned_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/abi/test_member_access_on_returned_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_member_access_on_returned_struct.c"
   (struct Struct~0
      (member value `int`))
   (function-definition
      make_struct~1 `fn() -> struct Struct~0 complete`
      (compound-statement
         (declaration value~3 `struct Struct~0 complete`
            (braced
               42))
         (return (name value~3 `struct Struct~0 complete`))))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (return
            (dot value
               (call (name make_struct~1 `fn() -> struct Struct~0 complete`)))))))

----- stderr -----
