panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__abi__test_multiple_structs_passed_as_int_pair.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/abi/test_multiple_structs_passed_as_int_pair.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_multiple_structs_passed_as_int_pair.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Struct~1
      (member string `array<char; 11>`))
   (function-definition
      print_struct~2 `fn(x: char, value: struct Struct~1 complete, y: char, other: struct Struct~1 complete, z: char) -> void`
      (params
         x~4 `char`
         value~5 `struct Struct~1 complete`
         y~6 `char`
         other~7 `struct Struct~1 complete`
         z~8 `char`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%s\n")
               (dot string
                  (name value~5 `struct Struct~1 complete`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%s\n")
               (dot string
                  (name other~7 `struct Struct~1 complete`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d %d\n")
               (name x~4 `char`)
               (name y~6 `char`)
               (name z~8 `char`)))))
   (function-definition
      main~9 `fn() -> int`
      (compound-statement
         (declaration value~11 `struct Struct~1 complete`
            (braced
               (string "0123456789")))
         (declaration v2~12 `struct Struct~1 complete`
            (braced
               (string "abcdefghjk")))
         (expression
            (call (name print_struct~2 `fn(x: char, value: struct Struct~1 complete, y: char, other: struct Struct~1 complete, z: char) -> void`)
               123
               (name value~11 `struct Struct~1 complete`)
               42
               (name v2~12 `struct Struct~1 complete`)
               27)))))

----- stderr -----
