panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__abi__test_non_8_sized_struct_passed_in_single_register.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/abi/test_non_8_sized_struct_passed_in_single_register.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_non_8_sized_struct_passed_in_single_register.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Struct~1
      (member x `int`))
   (function-definition
      print_struct~2 `fn(value: struct Struct~1 complete) -> void`
      (params
         value~4 `struct Struct~1 complete`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "struct Struct { int x = %d; }\n")
               (dot x
                  (name value~4 `struct Struct~1 complete`))))))
   (function-definition
      main~5 `fn() -> int`
      (compound-statement
         (struct Struct~1
            (member x `int`))
         (declaration value~7 `struct Struct~1 complete`
            (braced
               42))
         (expression
            (call (name print_struct~2 `fn(value: struct Struct~1 complete) -> void`)
               (name value~7 `struct Struct~1 complete`))))))

----- stderr -----
