panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__struct__abi__test_return_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/struct/abi/test_return_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_return_struct.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct Size4~1
      (member x `int`))
   (function-definition
      make_size4~2 `fn(value: int) -> struct Size4~1 complete`
      (params
         value~4 `int`)
      (compound-statement
         (struct Size4~1
            (member x `int`))
         (declaration s~5 `struct Size4~1 complete`
            (braced
               (name value~4 `int`)))
         (return (name s~5 `struct Size4~1 complete`))))
   (struct Size8~6
      (member x `long`))
   (function-definition
      make_size8~7 `fn() -> struct Size8~6 complete`
      (compound-statement
         (struct Size8~6
            (member x `long`))
         (declaration value~9 `struct Size8~6 complete` (braced ∅))
         (expression
            (assign
               (dot x
                  (name value~9 `struct Size8~6 complete`))
               123))
         (return (name value~9 `struct Size8~6 complete`))))
   (struct Size11~10
      (member string `array<char; 11>`))
   (function-definition
      make_size11~11 `fn(use_numbers: bool) -> struct Size11~10 complete`
      (params
         use_numbers~13 `bool`)
      (compound-statement
         (struct Size11~10
            (member string `array<char; 11>`))
         (declaration numbers~14 `struct Size11~10 complete`
            (braced
               (string "0123456789")))
         (struct Size11~10
            (member string `array<char; 11>`))
         (declaration letters~15 `struct Size11~10 complete`
            (braced
               (string "abcdefghij")))
         (return
            (conditional
               (name use_numbers~13 `bool`)
               (name numbers~14 `struct Size11~10 complete`)
               (name letters~15 `struct Size11~10 complete`)))))
   (struct Size16~16
      (member x `long`)
      (member y `long`))
   (function-definition
      make_size16~17 `fn(x: long, y: long) -> struct Size16~16 complete`
      (params
         x~19 `long`
         y~20 `long`)
      (compound-statement
         (struct Size16~16
            (member x `long`)
            (member y `long`))
         (declaration value~21 `struct Size16~16 complete`
            (braced
               (name x~19 `long`)
               (name y~20 `long`)))
         (return (name value~21 `struct Size16~16 complete`))))
   (struct Size27~22
      (member string `array<char; 27>`))
   (function-definition
      make_size27~23 `fn() -> struct Size27~22 complete`
      (compound-statement
         (struct Size27~22
            (member string `array<char; 27>`))
         (declaration value~25 `struct Size27~22 complete`
            (braced
               (string "abcdefghijklmnopqrstuvwxyz")))
         (return (name value~25 `struct Size27~22 complete`))))
   (function-definition
      main~26 `fn() -> int`
      (compound-statement
         (struct Size4~1
            (member x `int`))
         (declaration size4~28 `struct Size4~1 complete`
            (call (name make_size4~2 `fn(value: int) -> struct Size4~1 complete`)
               42))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (dot x
                  (name size4~28 `struct Size4~1 complete`))))
         (struct Size8~6
            (member x `long`))
         (declaration size8~29 `struct Size8~6 complete` (call (name make_size8~7 `fn() -> struct Size8~6 complete`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%ld\n")
               (dot x
                  (name size8~29 `struct Size8~6 complete`))))
         (struct Size11~10
            (member string `array<char; 11>`))
         (declaration numbers~30 `struct Size11~10 complete`
            (call (name make_size11~11 `fn(use_numbers: bool) -> struct Size11~10 complete`)
               true))
         (declaration letters~31 `struct Size11~10 complete`
            (call (name make_size11~11 `fn(use_numbers: bool) -> struct Size11~10 complete`)
               false))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%s\n%s\n")
               (dot string
                  (name numbers~30 `struct Size11~10 complete`))
               (dot string
                  (name letters~31 `struct Size11~10 complete`))))
         (struct Size16~16
            (member x `long`)
            (member y `long`))
         (declaration size16~32 `struct Size16~16 complete`
            (call (name make_size16~17 `fn(x: long, y: long) -> struct Size16~16 complete`)
               42
               27))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%ld %ld\n")
               (dot x
                  (name size16~32 `struct Size16~16 complete`))
               (dot y
                  (name size16~32 `struct Size16~16 complete`))))
         (struct Size27~22
            (member string `array<char; 27>`))
         (declaration size27~33 `struct Size27~22 complete` (call (name make_size27~23 `fn() -> struct Size27~22 complete`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%s\n")
               (dot string
                  (name size27~33 `struct Size27~22 complete`)))))))

----- stderr -----
